@@ -162,6 +162,7 @@ t/06191_Dialog_Scan_Sane.t
 t/06192_Dialog_Scan_Sane.t
 t/06193_Dialog_Scan_Sane.t
 t/06194_Dialog_Scan_Sane.t
+t/06195_Dialog_Scan_Sane.t
 t/0621_Dialog_Scan_CLI.t
 t/0622_Dialog_Scan_CLI.t
 t/0623_Dialog_Scan_CLI.t
@@ -173,6 +174,7 @@ t/0628_Dialog_Scan_CLI.t
 t/06290_Dialog_Scan_CLI.t
 t/06291_Dialog_Scan_CLI.t
 t/06292_Dialog_Scan_CLI.t
+t/06295_Dialog_Scan_CLI.t
 t/07_Dialog_Renumber.t
 t/081_Frontend_CLI.t
 t/0821_Frontend_Sane.t
