@@ -1,6 +1,7 @@
 1.5.4 (14.10.2016):
 
 * Fixed cycle SANE handle error when using frontend other than libsane-perl.
+* Fixed bug preventing # pages = all by default, even with ADF.
 
 
 1.5.3 (12.10.2016):
